# deerflow2.0-enhanced

./: .gitignore  kalshiv2_config.example.yaml
desktop/: README.md  deerflow_desktop.py  setup.py
kalshiv2/: __init__.py  __main__.py  config.py  install.bat  install.sh  pyproject.toml  requirements.txt
kalshiv2/api/: __init__.py  client.py
kalshiv2/execution/: __init__.py  executor.py
kalshiv2/feeds/: __init__.py  futures_feed.py  options_feed.py  polymarket_feed.py
kalshiv2/risk/: __init__.py  manager.py
kalshiv2/signals/: __init__.py  engine.py  technical.py
kalshiv2/strategy/: __init__.py  over_under.py
kalshiv2/utils/: logger.py
