[project]
name = "kalshiv2"
version = "2.0.0"
description = "Prediction market bet bot for Kalshi 15-minute over/under events"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "httpx>=0.27.0",
    "yfinance>=0.2.30",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
alpaca = ["alpaca-py>=0.20.0"]
all = [
    "alpaca-py>=0.20.0",
]

[project.scripts]
kalshiv2 = "kalshiv2.__main__:main"
